feat(translation): rename natural usage response field
